[gd_scene load_steps=5 format=2]

[ext_resource path="res://items/heart.png" type="Texture" id=1]
[ext_resource path="res://Font/C2.tres" type="DynamicFont" id=2]
[ext_resource path="res://Script/HUD.gd" type="Script" id=3]
[ext_resource path="res://Img/items/coin.png" type="Texture" id=4]

[node name="HUD" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Coin" type="Sprite" parent="CanvasLayer"]
position = Vector2( 291.625, 16.375 )
scale = Vector2( 0.309406, 0.284653 )
texture = ExtResource( 4 )

[node name="Heart" type="Sprite" parent="CanvasLayer"]
position = Vector2( 41.25, 17.75 )
scale = Vector2( 0.341584, 0.351485 )
texture = ExtResource( 1 )

[node name="Heart2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 73.25, 17.75 )
scale = Vector2( 0.341584, 0.351485 )
texture = ExtResource( 1 )

[node name="Heart3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 105.25, 17.75 )
scale = Vector2( 0.341584, 0.351485 )
texture = ExtResource( 1 )

[node name="Heart4" type="Sprite" parent="CanvasLayer"]
position = Vector2( 137.25, 17.75 )
scale = Vector2( 0.341584, 0.351485 )
texture = ExtResource( 1 )

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 910.0
margin_top = 15.0
margin_right = 989.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atk" type="Label" parent="CanvasLayer"]
margin_left = 706.0
margin_top = 13.0
margin_right = 749.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "ATK:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="CanvasLayer"]
margin_left = 320.0
margin_top = 7.0
margin_right = 360.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
